# Crypto-Expert-DeepSeek-LLM

./: .gitignore  README.md  finetune_pipeline.py  finetune_pipeline_large.py  generate_bad_response.py  generate_reward_data.py  prompt.md  pyproject.toml
json/: crypto-expert.sft-data.jsonl  final_data.jsonl  old_final_data.jsonl  reward_data.jsonl
